--- a/MauiAppHotel/Sobre/Sobre.xaml
+++ b/MauiAppHotel/Sobre/Sobre.xaml
@@ -136,7 +136,8 @@
             Text="Voltar"
             FontSize="16"
             FontFamily="Roboto-Bold"
-            Margin="70, 20, 70, 0"/>
+            Margin="70, 20, 70, 0"
+            Clicked="Button_Clicked"/>
 
     </VerticalStackLayout>
     
