--- a/MauiAppHotel/Views/ContratacaoHospedagem.xaml
+++ b/MauiAppHotel/Views/ContratacaoHospedagem.xaml
@@ -4,17 +4,41 @@
              x:Class="MauiAppHotel.Views.ContratacaoHospedagem"
              Title="ContratacaoHospedagem"
              NavigationPage.HasNavigationBar="False"
-             BackgroundColor="{StaticResource Gray100}">
+             BackgroundColor="Snow">
 
-    <VerticalStackLayout VerticalOptions="CenterAndExpand"
-                         Padding="10">
-        <Label 
-            Text="Cálculo da Diária"
-            FontFamily="Kalam"
+    <VerticalStackLayout VerticalOptions="CenterAndExpand">
+
+        <Label
+            Text="Horizon Hotel"
+            FontFamily="Roboto-Bold"
             FontSize="50"
-            TextColor="{StaticResource Primary}"/>
+            BackgroundColor="LightBlue"
+            TextColor="#121214"
+            HorizontalTextAlignment="Center"
+            Padding="0, 20, 0, 20"/>
 
-        <Frame Padding="10">
+        <VerticalStackLayout>
+
+            <Button
+                Text="i"
+                FontFamily="Roboto-Bold"
+                FontSize="25"
+                TextColor="Snow"
+                Margin="325, 10, 10, 0"
+                BackgroundColor="#2A2634"
+                Clicked="Button_Clicked_1"/>
+
+            <Label
+                Text="Faça sua hospedagem!"
+                FontFamily="Roboto-Bold"
+                FontSize="40"
+                TextColor="#121214"
+                Margin="10, 15, 10, 15"
+                HorizontalTextAlignment="Center"/>
+
+        </VerticalStackLayout>
+
+        <Frame Margin="10" BackgroundColor="#2A2634">
 
             <VerticalStackLayout>
 
@@ -25,7 +49,7 @@
                            Text="Adultos:"/>
 
                     <Label Grid.Row="0" Grid.Column="1"
-                           TextColor="{StaticResource Primary}"
+                           TextColor="Snow"
                            Text="{Binding Value}"
                            BindingContext="{x:Reference stp_adultos}"/>
                            
@@ -42,7 +66,7 @@
                            Text="Crianças:"/>
 
                     <Label Grid.Row="1" Grid.Column="1"
-                           TextColor="{StaticResource Primary}"
+                           TextColor="Snow"
                            Text="{Binding Value}"
                            BindingContext="{x:Reference stp_criancas}"/>
 
@@ -58,11 +82,13 @@
                 <Label Text="Escolha sua suíte"/>
 
                 <Picker x:Name="pck_quarto"
-                        Title="Selecione sua acomodação:"/>
+                        Title="Selecione sua acomodação:"
+                        ItemDisplayBinding="{Binding Descricao}"/>
 
-                
+
                 <Frame Padding="10"
-                       Margin="10">
+                       Margin="10"
+                       BackgroundColor="#121214">
 
                     <VerticalStackLayout>
 
@@ -73,6 +99,7 @@
                             <Label Text="Check-in:"/>
 
                             <DatePicker x:Name="dtpck_checkin"
+                                        DateSelected="dtpck_checkin_DateSelected"
                                         Format="dd/mm/yyyy"/>
 
                         </HorizontalStackLayout>
@@ -86,19 +113,25 @@
                                         Format="dd/mm/yyyy"/>
 
                         </HorizontalStackLayout>
-                        
-                        
+
+
                     </VerticalStackLayout>
-                        
+
                 </Frame>
-
-                <Button Text="Avançar"/>
-
 
             </VerticalStackLayout>
             
         </Frame>
-        
-        
+
+        <Button
+            Text="Reservar Agora!"
+            FontFamily="Roboto-Bold"
+            FontSize="20"
+            Clicked="Button_Clicked"
+            BackgroundColor="LightGreen"
+            Margin="60, 30, 60, 30"/>
+
+
+
     </VerticalStackLayout>
 </ContentPage>
