--- a/MauiAppHotel/Views/HospedagemContratada.xaml
+++ b/MauiAppHotel/Views/HospedagemContratada.xaml
@@ -2,11 +2,151 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.Views.HospedagemContratada"
-             Title="HospedagemContratada">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             NavigationPage.HasNavigationBar="False"
+             BackgroundColor="{StaticResource Gray100}">
+
+    <VerticalStackLayout VerticalOptions="CenterAndExpand">
+
+        <Label
+            Text="Horizon Hotel"
+            FontFamily="Roboto-Bold"
+            FontSize="50"
+            BackgroundColor="LightBlue"
+            TextColor="#121214"
+            HorizontalTextAlignment="Center"
+            Padding="0, 25, 0, 25"
+            Margin="0, 0, 0, 50"/>
+
+        <Frame
+            BackgroundColor="#2A2634"
+            Margin="20">
+
+            <VerticalStackLayout>
+
+                <Label
+                    Text="Suíte Super Luxo"
+                    TextColor="Snow"
+                    FontFamily="Roboto-Bold"
+                    FontSize="30"
+                    Margin="0, 20, 0, 30"
+                    HorizontalTextAlignment="Center"/>
+
+                <Frame Margin="10">
+
+                    <HorizontalStackLayout HorizontalOptions="Center">
+
+                        <HorizontalStackLayout Margin="10">
+
+                            <Label Text="Adultos: "
+                                   FontSize="18"
+                                   FontFamily="Roboto"
+                                   TextColor="Snow"/>
+                            
+                            <Label Text=" 2"
+                                   FontSize="18"
+                                   FontFamily="Roboto"
+                                   TextColor="Snow"/>
+
+                        </HorizontalStackLayout>
+
+                        <HorizontalStackLayout Margin="10">
+
+                            <Label Text="Criaças: "
+                                   FontSize="18"
+                                   FontFamily="Roboto"
+                                   TextColor="Snow"/>
+
+                            <Label Text=" 1"
+                                   FontSize="18"
+                                   FontFamily="Roboto"
+                                   TextColor="Snow"/>
+
+                        </HorizontalStackLayout>
+                
+                
+                    </HorizontalStackLayout>
+            
+                </Frame>
+
+                <Frame Margin="10">
+
+                    <Grid ColumnDefinitions="*, *, *"
+                          RowDefinitions="Auto, Auto">
+
+                        <Label Grid.Row="0"
+                            Grid.Column="0"
+                            Text="Check-in:"/>
+
+                        <Label Grid.Row="0"
+                            Grid.Column="1"
+                            Text="Check-out:"/>
+
+                        <Label Grid.Row="0"
+                            Grid.Column="2"
+                            Text="Estadia:"/>
+
+
+                
+                        <Label Grid.Row="1"
+                            Grid.Column="0"
+                            Text="valor 1"/>
+
+                        <Label Grid.Row="1"
+                            Grid.Column="1"
+                            Text="valor 2"/>
+
+                        <Label Grid.Row="1"
+                            Grid.Column="2"
+                            Text="valor 3"/>
+
+                    </Grid>
+            
+                </Frame>
+
+                <Frame Margin="10">
+
+                    <HorizontalStackLayout HorizontalOptions="Center">
+
+                        <Label Text="Valor Total: "
+                               FontSize="18"
+                               FontFamily="Roboto"
+                               TextColor="Snow"/>
+                        
+                        <Label Text="R$ 500,00"
+                               FontSize="18"
+                               FontFamily="Roboto-Bold"
+                               TextColor="Snow"
+                               Margin="10, 0, 0, 0"/>
+
+                    </HorizontalStackLayout>
+            
+                </Frame>
+
+            </VerticalStackLayout>
+
+        </Frame>
+
+        <HorizontalStackLayout Margin="20" HorizontalOptions="Center">
+            
+        <Button Text="Voltar"
+                FontFamily="Roboto-Bold"
+                FontSize="18"
+                TextColor="#2A2634"
+                BackgroundColor="LightCoral"
+                HorizontalOptions="Center"
+                Clicked="Button_Clicked"
+                Margin="20, 0, 30, 20"/>
+
+            <Button Text="Reservar"
+                FontFamily="Roboto-Bold"
+                FontSize="18"
+                TextColor="#2A2634"
+                BackgroundColor="LightGreen"
+                HorizontalOptions="Center"
+                Margin="30, 0, 20, 20"/>
+
+        </HorizontalStackLayout>
+        
     </VerticalStackLayout>
+
 </ContentPage>
